--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@
         <!-- Serviciile noastre oferite End -->
 
 
-        <!-- Get to know us Start -->
+        <!-- Cunoaște-ne Start -->
 
         <section class="bg-green">
 
@@ -1359,9 +1359,9 @@
 
                             <h1 class="heading-main light-mode">
 
-                                <small>Get to know us <i class="Moon Veterinary_repeat_grid"></i></small>
+                                <small>Cunoaște-ne<i class="Moon Veterinary_repeat_grid"></i></small>
 
-                                About Us <span class="txt-blue">Few words</span>
+                                Despre noi <span class="txt-blue">Câteva cuvinte</span>
 
                             </h1>
 
@@ -1384,7 +1384,7 @@
 
                                             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
 
-                                            Our Philosophy
+                                            Filozofia noastră
 
                                         </button>
 
@@ -1420,7 +1420,7 @@
 
                                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
 
-                                            Our Organization
+                                            Organizatia noastra
 
                                         </button>
 
@@ -1434,11 +1434,7 @@
 
                                             <div class="content">
 
-                                                Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna
-
-                                                nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum
-
-                                                convall.
+                                                Comoditatea aduce armonie, iar echilibrul este susținut cu grijă. Elementele principale contribuie la o structură solidă, în timp ce fiecare detaliu adaugă valoare întregului.
 
                                             </div>
 
@@ -1456,7 +1452,7 @@
 
                                             data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
 
-                                            Know More About Adoption
+                                            Află mai multe despre adopție
 
                                         </button>
 
@@ -1509,10 +1505,10 @@
 
         </section>
 
-        <!-- Get to know us End -->
+        <!-- Cunoaște-neEnd -->
 
 
-        <!-- Meet Our Groomers Start -->
+        <!-- Meet Our Frizeri pentru animale Start -->
 
         <section class="wide-tb-100">
 
@@ -1520,9 +1516,9 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>Our perfect staff <i class="Moon Veterinary_repeat_grid"></i></small>
+                    <small>Echipa noastră perfectă <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                    <span>Meet Our</span> Groomers
+                    <span>Meet Our</span> Frizeri pentru animale
 
                 </h1>
 
@@ -1794,11 +1790,11 @@
 
                         <div class="text-center">
 
-                            <strong>Meet our professionals</strong>
+                            <strong>Cunoașteți profesioniștii noștri</strong>
 
-                            <p>We have an experienced qualified team to take care of your best friend</p>
+                            <p>Avem o echipă calificată și experimentată pentru a avea grijă de cel mai bun prieten al tău.i</p>
 
-                            <a href="our-team.html" class="btn-theme bg-orange capusle bordered me-4">View All Team</a>
+                            <a href="our-team.html" class="btn-theme bg-orange capusle bordered me-4">Vezi toată echipa</a>
 
                         </div>
 
@@ -1810,7 +1806,7 @@
 
         </section>
 
-        <!-- Meet Our Groomers End -->
+        <!-- Meet Our Frizeri pentru animale End -->
 
 
         <!-- Counter Style Curve Background -->
@@ -1837,7 +1833,7 @@
 
                                 <div class="counter-txt"><span class="counter">325</span>+</div>
 
-                                <div>Adopted Pets</div>
+                                <div>Animale adoptate</div>
 
                             </div>
 
@@ -1864,7 +1860,7 @@
 
                                 <div class="counter-txt"><span class="counter">20</span>+</div>
 
-                                <div>Professionals</div>
+                                <div>Profesioniști</div>
 
                             </div>
 
@@ -1898,7 +1894,7 @@
 
                                 <div class="counter-txt"><span class="counter">14</span>+</div>
 
-                                <div>Pet Awards</div>
+                                <div>Animale fericite </div>
 
                             </div>
 
@@ -1925,7 +1921,7 @@
 
                                 <div class="counter-txt"><span class="counter">795</span>+</div>
 
-                                <div>Pets Gromming</div>
+                                <div>Animale Ingrijite</div>
 
                             </div>
 
@@ -1951,7 +1947,7 @@
         </section>
 
 
-        <!-- Image Tour Start -->
+        <!-- Imagine de ansamblu Start -->
 
         <section class="wide-tb-150">
 
@@ -1959,9 +1955,9 @@
 
                 <h1 class="heading-main center wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                    <small>Image Tour <i class="Moon Veterinary_repeat_grid"></i></small>
+                    <small>Imagine de ansamblu <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                    <span>Our</span> Galerie
+                    <span>Galeria</span> Noastra
 
                 </h1>
 
@@ -1974,11 +1970,11 @@
 
                             <div class="Galerie-content">
 
-                                <span data-lenis-stop href="assets/images/Galerie/Acasa/img_Galerie1.jpg" title="Simba Jake"><i class="icofont-plus"></i></span>
+                                <span data-lenis-stop href="assets/images/Galerie/Acasa/img_Galerie1.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Simba Jake</a></h3>
+                                <h3><a href="Galerie-single.html">Nume Pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -1990,11 +1986,11 @@
 
                             <div class="Galerie-content">
 
-                                <span href="assets/images/Galerie/Acasa/img_Galerie5.jpg" title="Molly Cat"><i class="icofont-plus"></i></span>
+                                <span href="assets/images/Galerie/Acasa/img_Galerie5.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Molly Cat</a></h3>
+                                <h3><a href="Galerie-single.html">Nume pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -2010,11 +2006,11 @@
 
                             <div class="Galerie-content">
 
-                                <span href="assets/images/Galerie/Acasa/img_Galerie2.jpg" title="Tiger Wood"><i class="icofont-plus"></i></span>
+                                <span href="assets/images/Galerie/Acasa/img_Galerie2.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Tiger Wood</a></h3>
+                                <h3><a href="Galerie-single.html">Nume pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -2026,11 +2022,11 @@
 
                             <div class="Galerie-content">
 
-                                <span href="assets/images/Galerie/Acasa/img_Galerie6.jpg" title="Gizmo Moody"><i class="icofont-plus"></i></span>
+                                <span href="assets/images/Galerie/Acasa/img_Galerie6.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Gizmo Moody</a></h3>
+                                <h3><a href="Galerie-single.html">Nume pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -2046,11 +2042,11 @@
 
                             <div class="Galerie-content">
 
-                                <span href="assets/images/Galerie/Acasa/img_Galerie3.jpg" title="Charlie Taz"><i class="icofont-plus"></i></span>
+                                <span href="assets/images/Galerie/Acasa/img_Galerie3.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Charlie Taz</a></h3>
+                                <h3><a href="Galerie-single.html">Nume pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -2062,11 +2058,11 @@
 
                             <div class="Galerie-content">
 
-                                <span href="assets/images/Galerie/Acasa/img_Galerie7.jpg" title="Sophie Cute"><i class="icofont-plus"></i></span>
+                                <span href="assets/images/Galerie/Acasa/img_Galerie7.jpg" title="Nume pacient"><i class="icofont-plus"></i></span>
 
-                                <h3><a href="Galerie-single.html">Sophie Cute</a></h3>
+                                <h3><a href="Galerie-single.html">Nume pacient</a></h3>
 
-                                <h5>Kitten</h5>
+                                <h5>Pisicuță</h5>
 
                             </div>
 
@@ -2079,7 +2075,7 @@
 
                     <div class="text-center wow fadeInUp col-md-12" data-wow-duration="0" data-wow-delay="0s">
 
-                        <a href="Galerie-4-col.html" class="btn-theme bg-orange btn-shadow">View Full Galerie</a>
+                        <a href="Galerie-4-col.html" class="btn-theme bg-orange btn-shadow">Vezi Galeria Noastra</a>
 
                     </div>
 
@@ -2089,7 +2085,7 @@
 
         </section>
 
-        <!-- Image Tour End -->
+        <!-- Imagine de ansamblu End -->
 
 
         <!-- Amazing Feedback Start -->
