--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 
                                         <ul class="list-unstyled">
 
-                                            <li><a class="dropdown-item" href="about.html">About Us</a></li>
+                                            <li><a class="dropdown-item" href="about.html">Despre Noi</a></li>
 
-                                            <li><a class="dropdown-item" href="our-team.html">Our Team</a></li>
+                                            <li><a class="dropdown-item" href="our-team.html">Echipa Noastra</a></li>
 
                                             <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>                                        
 
@@ -280,9 +280,9 @@
 
                                         <ul class="list-unstyled">
 
-                                            <li><a class="dropdown-item" href="our-services.html">Services</a></li>
+                                            <li><a class="dropdown-item" href="our-Servicii.html">Servicii</a></li>
 
-                                            <li><a class="dropdown-item" href="services-single.html">Services Single</a></li>                                        
+                                            <li><a class="dropdown-item" href="Servicii-single.html">Servicii Single</a></li>                                        
 
                                             <li><a class="dropdown-item" href="shortcodes-element.html">Elements Page 1</a></li>
 
@@ -1137,7 +1137,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1170,7 +1170,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1203,7 +1203,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1236,7 +1236,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1269,7 +1269,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1302,7 +1302,7 @@
 
                                 <p>Totul este posibil! Oferim soluții inovative pentru nevoile tale, cu un accent deosebit pe detalii și eficiență. </p>
 
-                                <a href="services-single.html" class="read-more-arrow">
+                                <a href="Servicii-single.html" class="read-more-arrow">
 
                                     Citește mai mult <span> <i class="icofont-simple-right"></i></span>
 
@@ -1319,7 +1319,7 @@
 
                     <div class="text-center wow fadeInUp col-md-12" data-wow-duration="0" data-wow-delay="0s">                    
 
-                        <a href="our-services.html" class="btn-theme bordered capusle bg-navy-blue">Vezi toate serviciile</a>
+                        <a href="our-Servicii.html" class="btn-theme bordered capusle bg-navy-blue">Vezi toate serviciile</a>
 
                     </div>
 
@@ -2088,7 +2088,7 @@
         <!-- Imagine de ansamblu End -->
 
 
-        <!-- Amazing Feedback Start -->
+        <!-- Uimitor Feedback Start -->
 
         <section class="wide-tb-150 bg-snow pos-rel bg-navy-blue">
 
@@ -2102,9 +2102,9 @@
 
                         <h1 class="heading-main center light-mode wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
 
-                            <small>What Our Customers Are Saying <i class="Moon Veterinary_repeat_grid"></i></small>
+                            <small>Ce spun clienții noștri? <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                            <span>Amazing</span> Feedback
+                            <span>Uimitor</span> Feedback
 
                         </h1>
 
@@ -2245,10 +2245,10 @@
 
         </section>
 
-        <!-- Amazing Feedback End -->
+        <!-- Uimitor Feedback End -->
 
 
-        <!-- Recent Blog Post Start -->
+        <!-- Blog recent Post Start -->
 
         <section class="wide-tb-100">
 
@@ -2256,9 +2256,9 @@
 
                 <h1 class="heading-main center">
 
-                    <small>Recent Blog Post <i class="Moon Veterinary_repeat_grid"></i></small>
+                    <small>Blog recent Post <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                    <span>Latest News </span> & Articles
+                    <span>Ultimile Noutati </span> & Articole
 
                 </h1>
 
@@ -2284,19 +2284,19 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
                             <h3 class="title">
 
-                                <a href="blog-single.html">How to Create a Cat’s Patio, or Outdoor Space</a>
+                                <a href="blog-single.html">um să creezi un spațiu exterior pentru pisică.</a>
 
                             </h3>
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Un spațiu exterior perfect pentru pisica ta trebuie să fie sigur, personalizat și adaptat nevoilor ei. Plasează elemente care să o ajute să Exploreazăze și să se joace în siguranță.</p>
 
                             </div>
 
@@ -2330,19 +2330,19 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
                             <h3 class="title">
 
-                                <a href="blog-single.html">Fun Overload Is When A Girl Is Exhausted From Fun</a>
+                                <a href="blog-single.html">Subiect de blog </a>
 
                             </h3>
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Viața activă prinde contur prin echilibru și eleganță, fiind susținută de un stil bine armonizat și structurat.</p>
 
                             </div>
 
@@ -2376,19 +2376,19 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
                             <h3 class="title">
 
-                                <a href="blog-single.html">Dog Flu – Does Your Dog Need Protecting?</a>
+                                <a href="blog-single.html">Gripa la câini – Are nevoie câinele tău de protecție?</a>
 
                             </h3>
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Viața activă prinde contur prin echilibru și eleganță, fiind susținută de un stil bine armonizat și structurat.</p>
 
                             </div>
 
@@ -2422,19 +2422,19 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
                             <h3 class="title">
 
-                                <a href="blog-single.html">Watch Your Step When You Have a Cat</a>
+                                <a href="blog-single.html">Atenție unde calci când ai o pisică</a>
 
                             </h3>
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Viața activă prinde contur prin echilibru și eleganță, fiind susținută de un stil bine armonizat și structurat.</p>
 
                             </div>
 
@@ -2468,7 +2468,7 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
@@ -2480,7 +2480,7 @@
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Viața activă prinde contur prin echilibru și eleganță, fiind susținută de un stil bine armonizat și structurat.</p>
 
                             </div>
 
@@ -2514,7 +2514,7 @@
 
                                 <div class="date">08 <span>APR</span></div>
 
-                                <a href="#" class="link-green">2 Comments</a>
+                                <a href="#" class="link-green">2 Comentarii</a>
 
                             </div>
 
@@ -2526,7 +2526,7 @@
 
                             <div class="description">
 
-                                <p>Proin viverra nisi at nisl imperdiet auctor. Donec ornare, est sed tincidunt placerat, sem mi suscipit mi.</p>
+                                <p>Viața activă prinde contur prin echilibru și eleganță, fiind susținută de un stil bine armonizat și structurat.</p>
 
                             </div>
 
@@ -2555,7 +2555,7 @@
 
         </section>
 
-        <!-- Recent Blog Post End -->
+        <!-- Blog recent Post End -->
 
 
     </main>
@@ -2591,13 +2591,11 @@
 
                             <div class="heading">
 
-                                <h3>Have Questions? Call Us <span class="txt-green">+1 (800) 123 456 789</span>
+                                <h3>Ai întrebări? Sună-ne<span class="txt-green">+1 0726914400</span>
 
                                 </h3>
 
-                                <div>In aliquet magna nec lobortis maximus. Etiam rhoncus leo a dolor placerat,
-
-                                    nec elementum ipsum convall.</div>
+                                <div>Într-un design bine echilibrat, măreția se regăsește în structuri bine definite. Tot astfel, armonia poate fi exprimată prin claritate și organizare.</div>
 
                             </div>
 
@@ -2659,13 +2657,10 @@
 
                 <div class="col-lg-4 col-md-6 me-auto">
 
-                    <h3 class="footer-heading">About Moon Veterinary</h3>
+                    <h3 class="footer-heading">Despre Moon Veterinary</h3>
 
-                    <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-
-                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-
-                        scrambled it to make a type specimen book.</p>
+                    <p>Animalele ne oferă iubire necondiționată și bucurie pură. Ele ne învață să fim mai buni, iar prezența lor aduce lumină și liniște în viețile noastre.
+</p>
 
                 </div>
 
@@ -2676,19 +2671,19 @@
 
                 <div class="col-lg-2 col-md-6">
 
-                    <h3 class="footer-heading">Explore</h3>
+                    <h3 class="footer-heading">Explorează</h3>
 
                     <div class="footer-widget-menu">
 
                         <ul class="list-unstyled">
 
-                            <li><a href="about.html"><i class="icofont-simple-right"></i> <span>About Us</span></a></li>
+                            <li><a href="about.html"><i class="icofont-simple-right"></i> <span>Despre Noi</span></a></li>
 
-                            <li><a href="our-services.html"><i class="icofont-simple-right"></i> <span>Services</span></a></li>
+                            <li><a href="our-Servicii.html"><i class="icofont-simple-right"></i> <span>Servicii</span></a></li>
 
-                            <li><a href="our-team.html"><i class="icofont-simple-right"></i> <span>Our Team</span></a></li>
+                            <li><a href="our-team.html"><i class="icofont-simple-right"></i> <span>Echipa Noastra</span></a></li>
 
-                            <li><a href="javascript:"><i class="icofont-simple-right"></i> <span>Adopt Pet</span></a></li>
+                            <li><a href="javascript:"><i class="icofont-simple-right"></i> <span>C</span></a></li>
 
                             <li><a href="Galerie-4-col.html"><i class="icofont-simple-right"></i> <span>Galerie</span></a></li>
 
@@ -2736,7 +2731,7 @@
 
                     <h3 class="footer-heading">Working Hours</h3>
 
-                    <p>Our support available to help you 24 hours a day. We provide our best.</p>
+                    <p>Echipa noastră de suport este disponibilă pentru a te ajuta în fiecare zi. Oferim tot ce avem mai bun.</p>
 
 
                     <div class="working-hours">
@@ -2745,25 +2740,25 @@
 
                             <li>
 
-                                <span class="txt-green">Mon – Fri :</span>
+                                <span class="txt-green">Luni – Vineri :</span>
 
-                                <span class="underline">08.00 am – 20.00 PM</span>
-
-                            </li>
-
-                            <li>
-
-                                <span class="txt-green">Saturday :</span>
-
-                                <span class="underline">09.00 am – 20.00 PM</span>
+                                <span class="underline">10.00 am – 18.00 PM</span>
 
                             </li>
 
                             <li>
 
-                                <span class="txt-green">Sunday :</span>
+                                <span class="txt-green">Sambata :</span>
 
-                                <span class="underline">We Are Closed</span>
+                                <span class="underline">10.00 am – 13.00 PM</span>
+
+                            </li>
+
+                            <li>
+
+                                <span class="txt-green">Duminica :</span>
+
+                                <span class="underline">Inchis</span>
 
                             </li>
 
@@ -2788,7 +2783,7 @@
 
                     <div>Copyrights <span id="yearText"></span> <span class="txt-green">Moon Veterinary</span> All Rights Reserved.</div>
 
-                    <div>Designed by <a href="https://themeforest.net/user/mannatstudio" rel="nofollow">MannatStudio</a>
+                    <div>Designed by <a href="https://themeforest.net/user/mannatstudio" rel="nofollow">BitaB</a>
 
                     </div>
 
