--- a/index.html
+++ b/index.html
@@ -1398,11 +1398,7 @@
 
                                             <div class="content">
 
-                                                Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna
-
-                                                nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum
-
-                                                convall.
+                                               La cabinetul nostru veterinar, iubirea și grija pentru animale sunt pe primul loc. Ne dedicăm sănătății și fericirii prietenilor necuvântători, oferind servicii profesionale și compasiune la fiecare vizită.
 
                                             </div>
 
@@ -1434,8 +1430,7 @@
 
                                             <div class="content">
 
-                                                Comoditatea aduce armonie, iar echilibrul este susținut cu grijă. Elementele principale contribuie la o structură solidă, în timp ce fiecare detaliu adaugă valoare întregului.
-
+                                                În organizația noastră, credem în puterea empatiei și a implicării. Ne dedicăm misiunii de a crea un impact pozitiv, sprijinind comunitatea și construind un viitor mai bun pentru toți.
                                             </div>
 
                                         </div>
@@ -1466,11 +1461,7 @@
 
                                             <div class="content">
 
-                                                Donec commodo sodales ex, scelerisque laoreet nibh hendrerit id. In aliquet magna
-
-                                                nec lobortis maximus. Etiam rhoncus leo a dolor placerat, nec elementum ipsum
-
-                                                convall.
+                                                Adopția înseamnă mai mult decât a oferi un cămin; înseamnă a schimba o viață. Prin iubire și grijă, animalele adoptate devin parte din familie, iar bucuria lor devine și a noastră. Oferă-le o șansă la fericire! ❤️
 
                                             </div>
 
