--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
 
                     <small>Echipa noastră perfectă <i class="Moon Veterinary_repeat_grid"></i></small>
 
-                    <span>Meet Our</span> Frizeri pentru animale
+                    <span>Fa Cunostinta Cu </span> Frizeri Pentru Animale
 
                 </h1>
 
